--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "custom-react-scripts": "0.0.23"
   },
   "dependencies": {
+    "axios": "^0.16.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2"
   },
