--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "axios": "^0.16.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-spinner": "^0.2.6"
+    "react-spinjs": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
