--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "history": "^4.6.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-router-dom": "^4.0.0",
     "react-spinjs": "^3.0.0"
   },
   "scripts": {
